# final-exam-cloud-comp

./: .env.example  Dockerfile  README.md  dashboard.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
notebooks/: 1.0-staging-eda.ipynb  2.0-warehouse-eda.ipynb
references/: data-dictionary.md
src/: config.py
src/data/: __init__.py  datastorage.py  schema.py  staging.py  warehouse.py
src/utils/: __init__.py  check_env_variable.py  convert_to_boolean.py  format_revenue.py  grab_product_category.py  int_to_datetime.py  int_to_datetime_str.py  remove_dash.py
