[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"
dependencies = [
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "psycopg2>=2.9.10",
    "pyarrow>=20.0.0",
    "sqlalchemy>=2.0.41",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["src"]
force_sort_within_sections = true

[tool.uv.sources]
src = { workspace = true }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "loguru>=0.7.3",
    "pip>=25.1.1",
    "python-dotenv>=1.1.0",
    "src",
    "tqdm>=4.67.1",
    "typer>=0.15.4",
]
